@@ -1,3 +1,8 @@
+2006-12-10  Mark Grondona <mgrondona@llnl.gov>
+
+	* src/pdsh/mod.c : Issue warning if module type/name is loaded
+	  more than once, and delete module with lower priority.
+
 2006-12-09  Mark Grondona <mgrondona@llnl.gov>
 
 	* src/common/macros.h : Only define bool if "true" and "false"
